--- a/recipes/cnn_breakout.yml
+++ b/recipes/cnn_breakout.yml
@@ -19,6 +19,6 @@ optimizer:
   lr: 0.0001  # learning rate
 model:
   p_x: normal  # <:['normal', 'bernoulli']>
-  p_z: euclid  # <:['euclid', 'nagano', 'nagano-unit', 'ovinnikov', 'mathieu']>
+  p_z: euclid  # <:['euclid', 'nagano', 'nagano-unit']>
   type: cnn  # <--model-type:['mlp', 'cnn']> model type
   n_latent: 20
